[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Shop.png" type="Texture" id=1]
[ext_resource path="res://assets/Sell_button.png" type="Texture" id=2]
[ext_resource path="res://assets/Roach.png" type="Texture" id=3]
[ext_resource path="res://assets/Pike.png" type="Texture" id=4]
[ext_resource path="res://assets/BrownTrout.png" type="Texture" id=5]
[ext_resource path="res://Shop.gd" type="Script" id=6]

[node name="Shop" type="Node2D"]
script = ExtResource( 6 )

[node name="ShopBase" type="TextureRect" parent="."]
margin_left = -18.1471
margin_top = -11.3679
margin_right = 237.853
margin_bottom = 244.632
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roach" type="TextureRect" parent="."]
margin_left = 16.3809
margin_top = 53.106
margin_right = 56.3809
margin_bottom = 93.106
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pike" type="TextureRect" parent="."]
margin_left = 21.2132
margin_top = 98.1665
margin_right = 61.2132
margin_bottom = 138.167
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trout" type="TextureRect" parent="."]
margin_left = 21.2132
margin_top = 146.725
margin_right = 61.2132
margin_bottom = 186.725
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roach_amount" type="Label" parent="."]
margin_left = 88.3709
margin_top = 62.8512
margin_right = 128.371
margin_bottom = 76.8512
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pike_amount" type="Label" parent="."]
margin_left = 89.4878
margin_top = 110.299
margin_right = 129.488
margin_bottom = 124.299
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trout_amount" type="Label" parent="."]
margin_left = 90.2672
margin_top = 160.246
margin_right = 130.267
margin_bottom = 174.246
text = "8"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButton3" type="Button" parent="." groups=[
"Sell_buttons",
]]
margin_left = 149.0
margin_top = 106.0
margin_right = 200.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButton" type="Button" parent="." groups=[
"Sell_buttons",
]]
margin_left = 149.0
margin_top = 58.0
margin_right = 199.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButton2" type="Button" parent="." groups=[
"Sell_buttons",
]]
margin_left = 149.0
margin_top = 155.0
margin_right = 199.0
margin_bottom = 177.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButtonImage3" type="TextureRect" parent="."]
margin_left = 104.53
margin_top = 86.5551
margin_right = 232.53
margin_bottom = 214.555
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButtonImage2" type="TextureRect" parent="."]
margin_left = 104.882
margin_top = 37.9129
margin_right = 232.882
margin_bottom = 165.913
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButtonImage" type="TextureRect" parent="."]
margin_left = 104.898
margin_top = -9.74484
margin_right = 232.898
margin_bottom = 118.255
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
